src/patternfly/components/Accordion/accordion.scss
// @debug $accordion; // check your variable names located in src/patternfly/sass-utilities/component-namespaces.scss

:root {
  // accordion
  --#{$accordion}--BackgroundColor: var(--pf-t--global--background--color--primary--default);
  --#{$accordion}--RowGap: var(--pf-t--global--spacer--xs);

  // accordion item
  --#{$accordion}__item--BorderRadius: var(--pf-t--global--border--radius--200);
  --#{$accordion}__item--m-expanded--BackgroundColor: var(--pf-t--global--background--color--action--plain--selected);

  // accordion toggle
  --#{$accordion}__toggle--ColumnGap: var(--pf-t--global--spacer--sm);
  --#{$accordion}__toggle--PaddingTop: var(--pf-t--global--spacer--sm);
  --#{$accordion}__toggle--PaddingRight: var(--pf-t--global--spacer--md);
  --#{$accordion}__toggle--PaddingBottom: var(--pf-t--global--spacer--sm);
  --#{$accordion}__toggle--m-expanded--PaddingBottom: var(--pf-t--global--spacer--sm);
  --#{$accordion}__toggle--PaddingLeft: var(--pf-t--global--spacer--md);
  --#{$accordion}__toggle--BackgroundColor: var(--pf-t--global--background--color--action--plain--default);
  --#{$accordion}__toggle--hover--BackgroundColor: var(--pf-t--global--background--color--action--plain--hover);
  --#{$accordion}__toggle--BorderRadius: var(--pf-t--global--border--radius--small);

  // Accordion toggle toggle-start modifier
  --#{$accordion}--m-toggle-start__toggle--ColumnGap: var(--pf-t--global--spacer--md);

  // accordion toggle text
  --#{$accordion}__toggle-text--Color: var(--pf-t--global--text--color--regular);
  --#{$accordion}__toggle-text--FontWeight: var(--pf-t--global--font--weight--body);
  --#{$accordion}__toggle--m-expanded__toggle-text--FontWeight: var(--pf-t--global--font--weight--body--bold);
  
  // accordion toggle icon
  --#{$accordion}__toggle-icon--Transition: .2s ease-in 0s;
  --#{$accordion}__toggle--m-expanded__toggle-icon--Rotate: 90deg;
  
  // accordion expandable content
  --#{$accordion}__expandable-content--MarginRight: var(--pf-t--global--spacer--md);
  --#{$accordion}__expandable-content--MarginBottom: var(--pf-t--global--spacer--md);
  --#{$accordion}__expandable-content--MarginLeft: var(--pf-t--global--spacer--md);
  --#{$accordion}__expandable-content--BackgroundColor: var(--pf-t--global--background--color--primary--default);
  --#{$accordion}__expandable-content--BorderRadius: var(--pf-t--global--border--radius--small);
  --#{$accordion}__expandable-content--Color: var(--pf-t--global--text--color--regular);
  --#{$accordion}__expandable-content--FontSize: var(--pf-t--global--font--size--body--default);
  --#{$accordion}__expandable-content--m-fixed--MaxHeight: #{pf-size-prem(150px)};

  // accordion expandable content body
  --#{$accordion}__expandable-content-body--PaddingTop: var(--pf-t--global--spacer--sm);
  --#{$accordion}__expandable-content-body--PaddingRight: var(--pf-t--global--spacer--sm);
  --#{$accordion}__expandable-content-body--PaddingBottom: var(--pf-t--global--spacer--sm);
  --#{$accordion}__expandable-content-body--PaddingLeft: var(--pf-t--global--spacer--sm);
  --#{$accordion}__expandable-content-body--expandable-content-body--PaddingTop: 0;
  
  // large
  --#{$accordion}--m-display-lg__toggle--PaddingTop: var(--pf-t--global--spacer--md);
  --#{$accordion}--m-display-lg__toggle--PaddingRight: var(--pf-t--global--spacer--md);
  --#{$accordion}--m-display-lg__toggle--PaddingBottom: var(--pf-t--global--spacer--md);
  --#{$accordion}--m-display-lg__toggle--m-expanded--PaddingBottom: var(--pf-t--global--spacer--sm);
  --#{$accordion}--m-display-lg__toggle--PaddingLeft: var(--pf-t--global--spacer--md);
  --#{$accordion}--m-display-lg__toggle--FontFamily: var(--pf-t--global--font--family--heading);
  --#{$accordion}--m-display-lg__toggle--FontSize: var(--pf-t--global--font--size--heading--sm);
  --#{$accordion}--m-display-lg__toggle-text--FontWeight: var(--pf-t--global--font--weight--heading);
  --#{$accordion}--m-display-lg__toggle--m-expanded__toggle-text--FontWeight: var(--pf-t--global--font--weight--heading--bold);
  --#{$accordion}--m-display-lg__expandable-content--FontSize: var(--pf-t--global--font--size--body--lg);
  --#{$accordion}--m-display-lg__expandable-content--Color: var(--pf-t--global--text--color--regular);
  
  // bordered
  --#{$accordion}--m-bordered--RowGap: 0;
  --#{$accordion}__item--m-bordered--BorderBottomWidth: var(--pf-t--global--border--width--divider--default);
  --#{$accordion}__item--m-bordered--BorderBottomColor: var(--pf-t--global--border--color--default);
}

.#{$accordion} {
  display: flex;
  flex-direction: column;
  row-gap: var(--#{$accordion}--RowGap);
  background-color: var(--#{$accordion}--BackgroundColor);

  &.pf-m-toggle-start {
    --#{$accordion}__toggle--ColumnGap: var(--#{$accordion}--m-toggle-start__toggle--ColumnGap);
  }

  &.pf-m-display-lg {
    --#{$accordion}__toggle--PaddingTop: var(--#{$accordion}--m-display-lg__toggle--PaddingTop);
    --#{$accordion}__toggle--PaddingRight: var(--#{$accordion}--m-display-lg__toggle--PaddingRight);
    --#{$accordion}__toggle--PaddingBottom: var(--#{$accordion}--m-display-lg__toggle--PaddingBottom);
    --#{$accordion}__toggle--m-expanded--PaddingBottom: var(--#{$accordion}--m-display-lg__toggle--m-expanded--PaddingBottom);
    --#{$accordion}__toggle--PaddingLeft: var(--#{$accordion}--m-display-lg__toggle--PaddingLeft);
    --#{$accordion}__toggle--FontFamily: var(--#{$accordion}--m-display-lg__toggle--FontFamily);
    --#{$accordion}__toggle--FontSize: var(--#{$accordion}--m-display-lg__toggle--FontSize);
    --#{$accordion}__toggle-text--FontWeight: var(--#{$accordion}--m-display-lg__toggle-text--FontWeight);
    --#{$accordion}__toggle--m-expanded__toggle-text--FontWeight: var(--#{$accordion}--m-display-lg__toggle--m-expanded__toggle-text--FontWeight);
    --#{$accordion}__expandable-content--FontSize: var(--#{$accordion}--m-display-lg__expandable-content--FontSize);
    --#{$accordion}__expandable-content--Color: var(--#{$accordion}--m-display-lg__expandable-content--Color);
  }

  &.pf-m-bordered {
    --#{$accordion}--RowGap: var(--#{$accordion}--m-bordered--RowGap);
    --#{$accordion}__item--BorderRadius: 0;
    --#{$accordion}__toggle--BorderRadius: 0;

    .#{$accordion}__item {
      border-block-end: var(--#{$accordion}__item--m-bordered--BorderBottomWidth) solid var(--#{$accordion}__item--m-bordered--BorderBottomColor);
    }
  }
}

.#{$accordion}__item {
  border-radius: var(--#{$accordion}__item--BorderRadius);
  
  &.pf-m-expanded {
    --#{$accordion}__toggle--PaddingBottom: var(--#{$accordion}__toggle--m-expanded--PaddingBottom);
    --#{$accordion}__toggle-text--FontWeight: var(--#{$accordion}__toggle--m-expanded__toggle-text--FontWeight);
    
    background-color: var(--#{$accordion}__item--m-expanded--BackgroundColor);

    .#{$accordion}__toggle-icon {
      transform: rotate(var(--#{$accordion}__toggle--m-expanded__toggle-icon--Rotate));
    }
  }
}

.#{$accordion}__toggle {
  display: flex;
  column-gap: var(--#{$accordion}__toggle--ColumnGap);
  align-items: center;
  width: 100%;
  padding-block-start: var(--#{$accordion}__toggle--PaddingTop);
  padding-block-end: var(--#{$accordion}__toggle--PaddingBottom);
  padding-inline-start: var(--#{$accordion}__toggle--PaddingLeft);
  padding-inline-end: var(--#{$accordion}__toggle--PaddingRight);
  font-family: var(--#{$accordion}__toggle--FontFamily, inherit);
  font-size: var(--#{$accordion}__toggle--FontSize, inherit);
  text-align: start;
  background-color: var(--#{$accordion}__toggle--BackgroundColor);
  border: 0;
  border-radius: var(--#{$accordion}__toggle--BorderRadius);

  &:is(:hover, :focus) {
    --#{$accordion}__toggle--BackgroundColor: var(--#{$accordion}__toggle--hover--BackgroundColor);
  }
}

.#{$accordion}__toggle-text {
  @include pf-v5-text-overflow;

  flex-grow: 1;
  font-weight: var(--#{$accordion}__toggle-text--FontWeight);
  color: var(--#{$accordion}__toggle-text--Color);
}

.#{$accordion}__toggle-icon {
  @include pf-v5-mirror-inline-on-rtl;

  transition: var(--#{$accordion}__toggle-icon--Transition);
}

.#{$accordion}__expandable-content {
  margin-block-end: var(--#{$accordion}__expandable-content--MarginBottom);
  margin-inline-start: var(--#{$accordion}__expandable-content--MarginLeft);
  margin-inline-end: var(--#{$accordion}__expandable-content--MarginRight);
  font-size: var(--#{$accordion}__expandable-content--FontSize);
  color: var(--#{$accordion}__expandable-content--Color);
  background-color: var(--#{$accordion}__expandable-content--BackgroundColor);
  border-radius: var(--#{$accordion}__expandable-content--BorderRadius);

  &.pf-m-fixed {
    max-height: var(--#{$accordion}__expandable-content--m-fixed--MaxHeight);
    overflow-y: auto;
  }
}

.#{$accordion}__expandable-content-body {
  padding-block-start: var(--#{$accordion}__expandable-content-body--PaddingTop);
  padding-block-end: var(--#{$accordion}__expandable-content-body--PaddingBottom);
  padding-inline-start: var(--#{$accordion}__expandable-content-body--PaddingLeft);
  padding-inline-end: var(--#{$accordion}__expandable-content-body--PaddingRight);

  & + & {
    --#{$accordion}__expandable-content-body--PaddingTop: var(--#{$accordion}__expandable-content-body--expandable-content-body--PaddingTop);
  }
}

